--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    margin-bottom: 0;
+    margin: 0;
     
 }
 
@@ -41,7 +41,7 @@ body{
     border: solid;
     border-color: black;
     width: 50%;
-    height: 200px;
+    height: 25%;
     margin: 0% auto;
     margin-top: 2%;
     align-items: center;
@@ -56,7 +56,9 @@ body{
     
 
 }
-
+/* #uploadViewCsv{
+    display: none;
+} */
 
 
 #uploadFile {
@@ -89,8 +91,8 @@ body{
 
 #imgCSV {
     display: flex;
-    height: 50%;
-    width: auto;
+    height: 20%;
+    width: 20%;
     margin: 0% auto;
 }
 
@@ -115,20 +117,40 @@ body{
 }
 
 #valor-factura {
-    padding-top: 10px;
+    position: fixed;
     display: flex;
-    margin: 0% auto;
+    flex-direction: column;
+    /* padding: 3%; */
+    height: 100%;
+    width: 100%;
+    /* top: 30%;
+    left: 25%; */
+    /* margin: 0% auto; */
+    font-size: xxx-large;
+    color:whitesmoke;
     align-items: center;
     justify-content: center;
+    z-index: 100;
+   
+    backdrop-filter:blur(25px);
 }
 
 #textInput{
-    padding-right: 20px;
+    padding-bottom: 5%;
    
 }
 #calcular {
     margin-left: 20px;
     font-family: 'Quicksand', sans-serif;
+}
+
+#newLabel{
+    display: flex;
+    flex-direction: row;
+    align-content: space-around;
+    justify-content: space-around;
+    margin-top: 5%;
+    font-size: xx-large;
 }
 
 #myTable {
@@ -162,6 +184,7 @@ th, td {
     color: white;
 
 }
+
 
 .footSite{
     display: flex;
@@ -212,6 +235,8 @@ th, td {
     animation: hithere 1s ease infinite;
 }
 
+
+
   @keyframes hithere {
     30% { transform: scale(2); }
     40%, 60% { transform: rotate(-20deg) scale(1.2); }
@@ -220,3 +245,10 @@ th, td {
     100% { transform: scale(1); }
   }
   
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] { -moz-appearance:textfield; }
